Thu Mar 13 17:19:15 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* Makefile.am: Add LightBank.

	* Makefile.in: Modified (Makefile.am).

Wed Feb 12 11:12:15 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* Eratho/README: Add several comments on client/server
 	applications. And give a full description of the example
 	behaviour.

Tue Jan  7 12:18:57 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* check-config.in (exec_prefix): Quote variables in the last test
 	in case of blank characters (?!)

Mon Sep 30 11:21:27 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Prime/Makefile.am (all-local): Use ../check-stamp instead of
	  calling check-config each time.

	* check-config.in: don't use type anymore and make sure that the
	  gnatdist which is first in PATH is the right one.
