@@ -4,9 +4,7 @@
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
-SED = @SED@
-
-GNATDIST = ${exec_prefix}/bin/gnatdist
+GNATDIST = gnatdist
 
 EXTRA_PROGS = mainloop
 CFGFILE = simcity.cfg
@@ -15,11 +13,11 @@ PARTITIONS = bank_server bank_client
 CLEANFILES = -r dsa *.o *.ali bin
 DISTCLEANFILES = $(EXTRA_PROGS) $(PARTITIONS)
 
-all-local: ../../check-stamp ${EXTRA_PROGS}
+all-local: ${top_srcdir}/Examples/check-stamp ${EXTRA_PROGS}
 
-../../check-stamp:
-	IN_MAKE=yes ${SHELL} ../../check-config
-	echo "It worked on `date`" > ../../check-stamp
+${top_srcdir}/Examples/check-stamp:
+	IN_MAKE=yes ${SHELL} ${top_srcdir}/Examples/check-config
+	echo "It worked on `date`" > ${top_srcdir}/Examples/check-stamp
 
 $(PARTITIONS):
 	${GNATDIST} -I${srcdir} $(CFGFILE)
